--- a/index.html
+++ b/index.html
@@ -11,14 +11,28 @@
     <h1>Welcome to Our Business Catalog</h1>
   </header>
   <main>
-    <section>
+    <section id="banner">
+      <img src="banner.jpg" alt="Banner Image">
+    </section>
+    <section id="catalog">
       <h2>Our Products</h2>
-      <ul>
-        <!-- Product items will go here -->
-        <li>Product 1: Description, Price</li>
-        <li>Product 2: Description, Price</li>
-        <!-- Add more products as needed -->
-      </ul>
+      <div class="product">
+        <img src="product1.jpg" alt="Product 1">
+        <div class="product-info">
+          <h3>Product 1</h3>
+          <p>Description of Product 1</p>
+          <p>Price: $XX.XX</p>
+        </div>
+      </div>
+      <div class="product">
+        <img src="product2.jpg" alt="Product 2">
+        <div class="product-info">
+          <h3>Product 2</h3>
+          <p>Description of Product 2</p>
+          <p>Price: $XX.XX</p>
+        </div>
+      </div>
+      <!-- Add more products as needed -->
     </section>
   </main>
   <footer>
