--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   </header>
   <main>
     <section id="banner">
-      <img src="banner.jpg" alt="Banner Image">
+      <img src="./images/banner.jpg" alt="Banner Image">
     </section>
     <section id="catalog">
       <h2>Our Products</h2>
       <div class="product">
-        <img src="product1.jpg" alt="Product 1">
+        <img src="./images/product1.jpg" alt="Product 1">
         <div class="product-info">
           <h3>Product 1</h3>
           <p>Description of Product 1</p>
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="product">
-        <img src="product2.jpg" alt="Product 2">
+        <img src="./images/product2.jpg" alt="Product 2">
         <div class="product-info">
           <h3>Product 2</h3>
           <p>Description of Product 2</p>
